appId: swiss.dfx.bitcoin
---
- runFlow: ../_setup.yaml
- tapOn:
    point: '85%,58%'
- waitForAnimationToEnd:
    timeout: 90000
- extendedWaitUntil:
    visible: 'Bitcoin, Lightning, 0 sats, .*'
    timeout: 90000
- tapOn:
    point: '90%,10%'
- extendedWaitUntil:
    visible: 'Allgemein'
    timeout: 20000
- tapOn: 'Lightning'
- extendedWaitUntil:
    visible: 'Lightning'
    timeout: 20000
- assertVisible: 'Typ'
- assertVisible: 'Lightning'
